# MedGemma-finetune

backend/: .gitignore  auth-test.py  aws_s3.py  config.py  connection.py  dependencies.py  llm-test.py  llm.py  locustfile.py  main.py  pyproject.toml  utils.py
backend/Database/: DatabaseManager.py
backend/datamodel/: __init__.py  db.py  types.py
backend/public/: index.html
backend/routes/: auth.py  sessions.py  utils.py  ws.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts
frontend/app/: page.tsx
frontend/src/Components/: RenderMarkdown.tsx
frontend/src/Styles/: globals.css
frontend/src/app/: layout.tsx
frontend/src/app/chat/: ChatInput.tsx  Message.tsx  chat.css  context.tsx  layout.tsx  page.tsx
frontend/src/app/chat/[session]/: layout.tsx  page.tsx  utils.ts
frontend/src/app/types/: datamodel.ts
